Fix text overflow

--- a/packages/web/src/components/track/GiantTrackTile.module.css
+++ b/packages/web/src/components/track/GiantTrackTile.module.css
@@ -194,6 +194,7 @@
 .description {
   padding-top: var(--harmony-unit-3);
   line-height: 26px;
+  word-break: break-all;
 }
 
 .verified {
